traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:15: error: ')' expected but ';' found.
      setPos (getX();getY()+1)
                    ^TraversalByColumn:15: error: ';' expected but ')' found.
      setPos (getX();getY()+1)
                             ^